--- a/ChicknFarmBrawl/GoogleService-Info.plist
+++ b/ChicknFarmBrawl/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyCv1bVe1t9y7nm1xjchMMtFZnYxxdCwpOc</string>
+	<string>AIzaSyDTrlJ4lcsr2CNQhQqL7ScZteesyOewvJg</string>
 	<key>GCM_SENDER_ID</key>
-	<string>469617126979</string>
+	<string>99454767103</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.PeregudaDev.app</string>
+	<string>com.tritestpushsw.app</string>
 	<key>PROJECT_ID</key>
-	<string>iosor-155</string>
+	<string>iosor-166</string>
 	<key>STORAGE_BUCKET</key>
-	<string>iosor-155.firebasestorage.app</string>
+	<string>iosor-166.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:469617126979:ios:d6764054d0cf0f7d2b6ef6</string>
+	<string>1:99454767103:ios:3bb0894be2ed080a0c21ca</string>
 </dict>
 </plist>
